Status/2025Q4/sylve.adoc: Add missing sponsorship line
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/status/report-2025-10-2025-12/sylve.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/sylve.adoc
@@ -76,3 +76,5 @@ Some clustering work is still ongoing.
 Once completed, we will release full project documentation and begin packaging Sylve for easy installation via pkg.
 
 We are also developing a new, tightly integrated backup system within the Sylve monorepo, enabling simple backup and restore of VMs, jails, and configurations.
+
+Sponsor: The FreeBSD Foundation
