website/ru: Update releases/15.0R/errata.adoc
Sync to EN cc6854009d75e97baa24f212d46765a3679d0713

--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -21,7 +21,7 @@ sidenav: download
 
 * <<intro,Введение>>
 * <<security,Бюллетени безопасности>>
-* <<errata,Уведомления об ошибках>>
+* <<errata,Уведомления об исправлениях>>
 * <<open-issues,Открытые проблемы>>
 * <<late-news,Последние новости>>
 
@@ -44,21 +44,21 @@ sidenav: download
 [width="100%",cols="40%,30%,30%",options="header",]
 |===
 |Бюллетень |Дата |Тема
-
-|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:12.rtsold.asc[FreeBSD-SA-25:12.rtsold] |16 декабря 2025 |Удаленное выполнение кода через ND6 Router Advertisements
-
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:12.rtsold.asc[FreeBSD-SA-25:12.rtsold] |16 декабря 2025 |Удалённое выполнение кода через ND6 Router Advertisements
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:01.openssl.asc[FreeBSD-SA-26:01.openssl] |27 января 2026 |Несколько уязвимостей в OpenSSL
 |===
 
 [[errata]]
-== Уведомления об ошибках
+== Уведомления об исправлениях
 
 [width="100%",cols="40%,30%,30%",options="header",]
 |===
 |Исправление |Дата |Тема
-
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:19.zfs.asc[FreeBSD-EN-25:19.zfs] |16 декабря 2025 |Обращение к нулевому указателю в ядре от непривилегированного пользователя
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:20.vmm.asc[FreeBSD-EN-25:20.vmm] |16 декабря 2025 |Регрессия PCI passthru в bhyve(8)
-
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:01.devinfo.asc[FreeBSD-EN-26:01.devinfo] |27 января 2026 |Некорректный формат выдачи devinfo
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:02.arm64.asc[FreeBSD-EN-26:02.arm64] |27 января 2026 |Некорректное сохранение регистров arm64 SVE при обработке сигналов
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:03.vm.asc[FreeBSD-EN-26:03.vm] |27 января 2026 |Некорректное обнуление памяти в обработчике отсутствующих страниц памяти
 |===
 
 [[open-issues]]
@@ -70,7 +70,7 @@ sidenav: download
 
 2. **man:devinfo[8]**: Формат выдаваемого результата случайно изменился +
 **Обходное решение**: пользователи, обрабатывающие результат работы утилиты man:devinfo[8], должны скомпилировать её из обновлённого исходного кода +
-**Статус**: изменение отменено в ветке main - https://bugs.freebsd.org/291511 +
+**Статус**: изменение отменено во FreeBSD 15.0-RELEASE-p2 - https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:01.devinfo.asc +
 
 3. **man:pkgbase[7]**: Модернизация системы с версии 14.3 на 15.0 не поддерживается +
 **Обходное решение**: системы, установленные при помощи man:pkgbase[7], должны быть переустановлены с использованием резервных копий +
@@ -80,8 +80,8 @@ sidenav: download
 **Обходное решение**: не устанавливайте этот релиз на системах Apple G5 +
 **Статус**: исправлено в ветке main - https://bugs.freebsd.org/292341 +
 
-5. **man:loader.efi[8]**: Имеется изъян, не позволяющий осуществить загрузку на некоторых системах +
-**Обходное решение**: укажите `console="eficom"` в приглашении man:loader[8], если при загрузке ядра происходит сбой +
+5. **man:loader.efi[8]**: Имеется недочёт, не позволяющий осуществить загрузку на некоторых системах (в том числе системах HPE) с модулями удалённого доступа через консоль последовательного порта +
+**Обходное решение**: Выполните команду unset `hw.uart.console` в приглашении man:loader[8], если при загрузке ядра наблюдаются зависания или постоянные перезагрузки +
 **Статус**: исправлено в ветке main - https://bugs.freebsd.org/291461 +
 
 [[late-news]]
@@ -92,5 +92,5 @@ sidenav: download
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (13.01.2026): 4faf0e7a8a20a7ddda25d965e68587401dbf8f79
+// Original EN revision (29.01.2026): cc6854009d75e97baa24f212d46765a3679d0713
 //
