porters-handbook: add the Budgie virtual category
PR:		293065
Submitted by:	wosch

--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -679,6 +679,10 @@ For non-virtual categories, there is a one-line description in `COMMENT` in that
 |Biology-related software.
 |
 
+|[.filename]#budgie#`*`
+|Software related to the Budgie desktop environment.
+|
+
 |[.filename]#cad#
 |Computer aided design tools.
 |
