Enhance IPv6 addressing and packet filtering notes
Added example for assigning a dynamic IPv6 address to a bridge interface and clarified packet filtering behavior.

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -1435,7 +1435,15 @@ This example sets a static IP address:
 ....
 
 It is also possible to assign an IPv6 address to a bridge interface.
+
 To make the changes permanent, add the addressing information to [.filename]#/etc/rc.conf#.
+
+This example uses a dynamic IPv6 address:
+
+[.programlisting]
+....
+ifconfig_bridge0_ipv6="inet6 auto_linklocal accept_rtadv"
+....
 
 [NOTE]
 ====
