--- a/website/content/en/releases/13.2R/relnotes.adoc
+++ b/website/content/en/releases/13.2R/relnotes.adoc
@@ -39,7 +39,7 @@ Information regarding pre-built, binary {releaseType} distributions along this b
 
 This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
 It can be found at https://www.FreeBSD.org/releases/[] or any of its mirrors.
-More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}/mirrors[Obtaining FreeBSD appendix] to the link:{handbook}/[FreeBSD Handbook].
+More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}mirrors[Obtaining FreeBSD appendix] to the link:{handbook}[FreeBSD Handbook].
 
 All users are encouraged to consult the release errata before installing FreeBSD.
 The errata document is updated with "late-breaking" information discovered late in the release cycle or after the release.
@@ -198,7 +198,7 @@ Supported `LLVM` sanitizers are now enabled on `powerpc64` and variants.
 
 `OpenSSL` has been upgraded to version 1.1.1t.
 
-`sendmail` has been upgraded to version 8.17.1. 
+`sendmail` has been upgraded to version 8.17.1.
 gitref:68e86d5265bc[repository=src]
 
 `sqlite3` has been upgraded to version 3.40.1.
