--- a/website/content/en/releases/13.3R/relnotes.adoc
+++ b/website/content/en/releases/13.3R/relnotes.adoc
@@ -40,7 +40,7 @@ Information regarding pre-built, binary {releaseType} distributions along this b
 
 This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
 It can be found at https://www.FreeBSD.org/releases/[] or any of its mirrors.
-More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}/mirrors[Obtaining FreeBSD appendix] to the link:{handbook}/[FreeBSD Handbook].
+More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}mirrors[Obtaining FreeBSD appendix] to the link:{handbook}[FreeBSD Handbook].
 
 All users are encouraged to consult the release errata before installing FreeBSD.
 The errata document is updated with "late-breaking" information discovered late in the release cycle or after the release.
@@ -166,7 +166,7 @@ gitref:b27bad1e0373[repository=src] gitref:079a1c2059e7[repository=src] gitref:d
 
 `nvi` (man:vi[1]) has been upgraded to version 2.2.1.
 
-`sendmail` has been upgraded to version 8.18.1. 
+`sendmail` has been upgraded to version 8.18.1.
 This version enforces stricter RFC compliance by default, especially with respect to line endings.
 This may cause issues with receiving messages from non-compliant MTAs; please see the first 8.18.1 release note in link:https://ftp.sendmail.org/RELEASE_NOTES[] for mitigations.
 gitref:b36ddb27b3b9[repository=src]
