--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -37,7 +37,7 @@ Information regarding pre-built, binary {releaseType} distributions along this b
 
 This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
 It can be found at https://www.FreeBSD.org/releases/[] or any of its mirrors.
-More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}/mirrors[Obtaining FreeBSD appendix] to the link:{handbook}/[FreeBSD Handbook].
+More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}mirrors[Obtaining FreeBSD appendix] to the link:{handbook}[FreeBSD Handbook].
 
 All users are encouraged to consult the release errata before installing FreeBSD.
 The errata document is updated with "late-breaking" information discovered late in the release cycle or after the release.
