website: fix links to man in relnotes 15.0R
Approved by: re (implicit)
PR: 281384

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1467,7 +1467,7 @@ gitref:ef2a572bf6[repository=src]
 A new man:ngctl[8] flag, `-j`, allows it to attach and run inside a jail, making it possible to manipulate netgraph nodes in a jail even if man:ngctl[8] is not installed inside it.
 gitref:72d01e62b082[repository=src]
 
-man:sockstat[4] will show UDP-Lite endpoints by default.
+man:sockstat[1] will show UDP-Lite endpoints by default.
 gitref:978615d7bf7c[repository=src]
 
 Kernel compatibility code supporting man:ipfw[8] binaries from FreeBSD 7 and 8 has been removed.
@@ -1520,7 +1520,7 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 [[hardware-virtualization]]
 === Virtualization Support
 
-man:bhyve[8] and man:vmm[4] now support the arm64 and riscv platforms.
+man:bhyve[4] and man:vmm[4] now support the arm64 and riscv platforms.
 The `sysutils/u-boot-bhyve-arm64` and `sysutils/u-boot-bhyve-riscv` ports provide boot loaders for use on these platforms.
 gitref:47e073941f4e[repository=src]
 gitref:d3916eace506[repository=src]
@@ -1529,12 +1529,12 @@ gitref:d3916eace506[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 {{< sponsored "University Politehnica of Bucharest" >}}
 
-man:bhyve[4] now supports a "slirp" networking backend, which enables unprivileged user networking.
+man:bhyve[8] now supports a "slirp" networking backend, which enables unprivileged user networking.
 Currently only inbound connections to the guest are supported, outbound connections from the guest are not.
 This feature requires the `net/libslirp` port.
 gitref:c5359e2af5ab[repository=src] {{< sponsored "Innovate UK" >}}
 
-man:bhyve[4] now may configure a NUMA topology for guest memory.
+man:bhyve[8] now may configure a NUMA topology for guest memory.
 Furthermore, it is possible to define a man:domainset[9] policy for each guest NUMA domain, wherein the host memory used to back the guest physical memory of each guest NUMA domain can be specified, akin to man:cpuset[1]'s `-n` option.
 This is supported only for amd64 guests for now.
 gitref:f1d705d4f431[repository=src]
@@ -1542,7 +1542,7 @@ gitref:f1d705d4f431[repository=src]
 The VNC server in man:bhyve[8] will now show the correct colors when using the package:www/novnc[] client.
 gitref:f9e09dc5b1d5[repository=src]
 
-When running man:bhyve[8] guests with a boot ROM, i.e., bhyveload(8) is not used, bhyve now assumes that the boot ROM will enable PCI BAR decoding.
+When running man:bhyve[8] guests with a boot ROM, i.e., man:bhyveload[8] is not used, bhyve now assumes that the boot ROM will enable PCI BAR decoding.
 This is incompatible with some boot ROMs, particularly outdated builds of `edk2-bhyve`.
 To restore the old behavior, add `pci.enable_bars='true'` to your bhyve configuration.
 Note that the `uefi-edk2-bhyve` package has been renamed to `edk2-bhyve`.
