website/ru: Update releases/15.0R/errata.adoc
Sync to EN 5e7c1270fac8e5b7f6f877cd9711f07cd5d0958a

--- a/website/content/ru/releases/15.0R/errata.adoc
+++ b/website/content/ru/releases/15.0R/errata.adoc
@@ -46,6 +46,8 @@ sidenav: download
 |Бюллетень |Дата |Тема
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:12.rtsold.asc[FreeBSD-SA-25:12.rtsold] |16 декабря 2025 |Удалённое выполнение кода через ND6 Router Advertisements
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:01.openssl.asc[FreeBSD-SA-26:01.openssl] |27 января 2026 |Несколько уязвимостей в OpenSSL
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:03.blocklistd.asc[FreeBSD-SA-26:03.blocklistd] |10 февраля 2026 |Утечка сетевых соединений в blocklistd(8)
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:04.arm64.asc[FreeBSD-EN-26:04.arm64] |10 февраля 2026 |Аварийное завершение работы ядра при сохранении образа процесса на платформе arm64
 |===
 
 [[errata]]
@@ -92,5 +94,5 @@ sidenav: download
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (29.01.2026): cc6854009d75e97baa24f212d46765a3679d0713
+// Original EN revision (11.02.2026): 5e7c1270fac8e5b7f6f877cd9711f07cd5d0958a
 //
