comitters-guide: Update Submitted: by trailer
Suggested by:		imp
Discussed with:		emaste
Reviewed by:		markj
Differential Revision:	https://reviews.freebsd.org/D55120

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2588,11 +2588,13 @@ Typically used when there is no PR, for example if the issue was reported on
 a mailing list.
 
 |`Submitted by:` +
-(deprecated)
-|This has been deprecated with the migration to git; submitted patches should have the author set by using `git commit --author` with a full name and valid email.
+(discouraged)
+|Name of an author who submitted a change without providing a full valid patch, especially without a valid email.
+Submitted patches should have the author set by using `git commit --author` with a full name and valid email.
+Before the migration to git allowed separate author and committer fields, this was used for contributed patches.
 
 |`Reviewed by:`
-a|
+|
 The name and e-mail address of the person or people that reviewed the change; for developers, just the username on the FreeBSD cluster. If a patch was submitted to a mailing list for review, and the review was favorable, then just include the list name. If the reviewer is not a member of the project, provide the name, email, and if ports an external role like maintainer:
 
 Reviewed by a developer:
