stable/14 is now 14.4-STABLE
Update errata and advisory templates and download page.

Sponsored by:	OpenSats Initiative

--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -98,6 +98,9 @@
 :u-rel150-readme: https://www.FreeBSD.org/releases/{rel150-current}R/readme/
 :u-rel150-signatures: https://www.FreeBSD.org/releases/{rel150-current}R/signatures/
 
+:rel144-current-major: 14
+:rel144-current: 14.4
+
 :rel143-current-major: 14
 :rel143-current: 14.3
 :rel143-current-date: June 10, 2025
