website: fix typos in relnotes 15.0R
Approved by: re (implicit)

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -675,7 +675,7 @@ The Time Zone Database, `tzdata`, has been updated to 2025b.
 gitref:475082194ac8[repository=src]
 
 OpenSSH has been updated to 10.0p2.
-.gitref:8e28d84935f2[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+gitref:8e28d84935f2[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 OpenSSL has been updated to 3.5.4.
 gitref:c0366f908ff4[repository=src]
@@ -684,8 +684,8 @@ Lua has been updated to 5.4.8.
 gitref:3068d706eabe[repository=src]
 {{< sponsored "Netflix" >}}
 
-The Google Test C++ testing framework has been updated to 1.15.2.
-One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
+The Google Test {cpp} testing framework has been updated to 1.15.2.
+One notable change is that GoogleTest 1.15.x now officially requires {cpp}-14 (1.14.x required {cpp}-11).
 gitref:1d67cec52542[repository=src]
 
 The `spleen` man:vt[4] console font has been updated to version 2.1.0.
@@ -842,7 +842,7 @@ gitref:3fde39073c72[repository=src]
 
 The cryptographically weak DSA signature algorithm was removed from OpenSSH, following upstream.
 
-The man:publickey[5] database has been removed,
+The man:publickey[5] database has been removed.
 This uses DES and we hope that nobody uses that in 2025.
 gitref:9197c04a251b[repository=src]
 
@@ -873,8 +873,8 @@ The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 ("Gra
 gitref:28b881840df7[repository=src] {{< sponsored "Amazon" >}}
 
 Several bug fixes and configuration changes collectively allow device hotplug on both x86 and arm64 ("Graviton") EC2 instances.
-gitref:ce9a34b1614e[repository=src]
-gitref:55c3348ed78f[repository=src]
+gitref:ce9a34b1614e[repository=src],
+gitref:55c3348ed78f[repository=src],
 gitref:d70bac252d30[repository=src]
 {{< sponsored "Amazon" >}}
 
@@ -918,21 +918,21 @@ gitref:aa32d7cbc92c[repository=src]
 
 FreeBSD now natively implements the Linux man:inotify[2] interface.
 The system calls themselves are not API-compatible, but libc provides an API-compatible interface, so software which relies on inotify can be run unmodified.
-gitref:f1f230439fa4[repository=src],
+gitref:f1f230439fa4[repository=src]
 {{< sponsored "Klara, Inc." >}}
 
 The `fpu_kern_enter` and `fpu_kern_leave` routines have been implemented for powerpc, allowing the use of man:ossl[4] crypto functions in the kernel that use floating point and vector registers.
 gitref:91e53779b4fc[repository=src]
 
 Support legacy PCI hotplug on arm64.
-gitref:355f02cddbf0[repository=src].
+gitref:355f02cddbf0[repository=src]
 {{< sponsored "Arm Ltd" >}}
 
 Jails can now be accessed via jail descriptors in man:jail_set[2] and man:jail_get[2], as well as the new `jail_attach_jd(2)` and `jail_remove_jd(2)` syscalls.  They allow manipulation of jails through the file descriptor interface without the race conditions inherent in jail IDs, and can also optionally control jail lifetime.
 gitref:851dc7f859c2[repository=src]
 
 Jails and jail descriptors now have associated man:kevent[2] filters that allow tracking jail creation, changes, attachment, and removal.
-gitref:1bd74d201a53[repository=src]
+gitref:1bd74d201a53[repository=src],
 gitref:9d7f89ef2607[repository=src]
 
 A new common 'mac' node for MAC modules' jail parameters has been created.
@@ -995,7 +995,7 @@ Refactor `pcm_chnalloc()` and merge with parts of `vchan_setnew()` (now removed)
 The function is responsible for either using a free HW channel (if `vchans` are disabled), or allocating a new vchan.
 `hw.snd.vchans_enable` (previously `hw.snd.maxautovchans`) and `dev.pcm.X.{play|rec}.vchans` now work as tunables to only enable/disable `vchans`, as opposed to setting their number and/or (de-)allocating vchans.
 Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before it could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
-gitref:960ee8094913[repository=src].
+gitref:960ee8094913[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
 The `hw.snd.version` man:sysctl[8] knob was removed.
@@ -1093,7 +1093,8 @@ Support for ACPI GPIO _AEI objects has been added.
 gitref:1db6ffb2a482[repository=src] {{< sponsored "Amazon" >}}
 
 man:nvme[4] and man:nvmecontrol[8] have been enabled on all architectures.
-gitref:24687a65dd7f[repository=src], gitref:aba2d7f89dcf[repository=src]
+gitref:24687a65dd7f[repository=src],
+gitref:aba2d7f89dcf[repository=src]
 {{< sponsored "Chelsio Communications and Netflix" >}}
 
 man:mpi3mr[4] driver version has been updated to 8.14.0.2.0.
@@ -1127,7 +1128,7 @@ gitref:32fdad17f060[repository=src]
 man:ix[4]: Add support for 1000BASE-BX SFP modules.
 Add support for 1Gbit BiDi modules.
 Add support for Intel Ethernet Network Adapter E610.
-gitref:89d4096950c4[repository=src]
+gitref:89d4096950c4[repository=src],
 gitref:dea5f973d0c8[repository=src]
 
 man:igc[4]: Fix attach for I226-K and LMVP devices.
@@ -1198,7 +1199,7 @@ gitref:138e36514fe8[repository=src]
 === Deprecated and Removed Drivers
 
 The man:agp[4] bus driver has been deprecated and planned for removal in FreeBSD 16.0.
-gitref:92af7c97e197[repository=src]
+gitref:92af7c97e197[repository=src],
 gitref:cadadd1a0398[repository=src]
 
 The IBM PC floppy disk controller, man:fdc[4], and related utilities have been deprecated and planned for removal in FreeBSD 16.0.
@@ -1522,7 +1523,7 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 
 man:bhyve[4] and man:vmm[4] now support the arm64 and riscv platforms.
 The `sysutils/u-boot-bhyve-arm64` and `sysutils/u-boot-bhyve-riscv` ports provide boot loaders for use on these platforms.
-gitref:47e073941f4e[repository=src]
+gitref:47e073941f4e[repository=src],
 gitref:d3916eace506[repository=src]
 {{< sponsored "Arm Ltd" >}}
 {{< sponsored "Innovate UK" >}}
