--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -40,7 +40,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: IGNORE
+:beta-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -55,7 +55,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: IGNORE
+:beta2-upcoming: INCLUDE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -100,15 +100,15 @@
 
 :rel144-current-major: 14
 :rel144-current: 14.4
-:rel144-current-date: March 10, 2026
+//:rel144-current-date: March 10, 2026
 
-:u-rel144-notes: https://www.FreeBSD.org/releases/{rel144-current}R/relnotes/
-:u-rel144-announce: https://www.FreeBSD.org/releases/{rel144-current}R/announce/
-:u-rel144-errata: https://www.FreeBSD.org/releases/{rel144-current}R/errata/
-:u-rel144-hardware: https://www.FreeBSD.org/releases/{rel144-current}R/hardware/
-:u-rel144-installation: https://www.FreeBSD.org/releases/{rel144-current}R/installation/
-:u-rel144-readme: https://www.FreeBSD.org/releases/{rel144-current}R/readme/
-:u-rel144-signatures: https://www.FreeBSD.org/releases/{rel144-current}R/signatures/
+//:u-rel144-notes: https://www.FreeBSD.org/releases/{rel144-current}R/relnotes/
+//:u-rel144-announce: https://www.FreeBSD.org/releases/{rel144-current}R/announce/
+//:u-rel144-errata: https://www.FreeBSD.org/releases/{rel144-current}R/errata/
+//:u-rel144-hardware: https://www.FreeBSD.org/releases/{rel144-current}R/hardware/
+//:u-rel144-installation: https://www.FreeBSD.org/releases/{rel144-current}R/installation/
+//:u-rel144-readme: https://www.FreeBSD.org/releases/{rel144-current}R/readme/
+//:u-rel144-signatures: https://www.FreeBSD.org/releases/{rel144-current}R/signatures/
 
 :rel143-current-major: 14
 :rel143-current: 14.3
