Handbook - Kernelconfig: Restore PORTS_MODULES section
Reported by:	des@

--- a/documentation/content/en/books/handbook/kernelconfig/_index.adoc
+++ b/documentation/content/en/books/handbook/kernelconfig/_index.adoc
@@ -292,8 +292,7 @@ Once the edits to the custom configuration file have been saved, the source code
 # make installkernel KERNCONF=MYKERNEL
 ....
 +
-. Shutdown the system and reboot into the new kernel. If something goes wrong,
-  refer to crossref:kernelconfig[kernelconfig-noboot, The kernel does not boot].
+. Shutdown the system and reboot into the new kernel. If something goes wrong, refer to crossref:kernelconfig[kernelconfig-noboot, The kernel does not boot].
 ====
 
 By default, when a custom kernel is compiled, all kernel modules are rebuilt.
@@ -311,6 +310,24 @@ Alternately, this variable lists which modules to exclude from the build process
 [.programlisting]
 ....
 WITHOUT_MODULES = linux acpi sound
+....
+
+This variable instructs the build to skip kernel modules and compile only the kernel itself:
+
+[.programlisting]
+....
+NO_MODULES = yes
+....
+
+The Ports Framework includes drivers and other modules that depend on kernel interfaces, such as package:graphics/drm-kmod[] or package:emulators/virtualbox-ose-kmod[].
+With the `PORTS_MODULES` variable, every time the kernel is built, the ports containing kernel modules are re‑built against the updated sources.
+This ensures the kernel module stays in‑sync with the kernel itself.
+The kernel and ports trees should be updated together for maximum compatibility.
+`PORTS_MODULES` can be added to [.filename]#/etc/make.conf# to ensure all kernels you build also rebuild these modules.
+
+[.programlisting]
+....
+PORTS_MODULES = drm-kmod virtualbox-ose-kmod
 ....
 
 Additional variables are available.
