--- a/website/content/en/releases/14.4R/schedule.adoc
+++ b/website/content/en/releases/14.4R/schedule.adoc
@@ -37,7 +37,7 @@ General discussions about the pending release and known issues should be sent to
 |Code slush begins |23 January 2026 |23 January 2026 |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
 |{localBranchReleng} branch |6 February 2026 |6 February 2026 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |6 February 2026 |6 February 2026 |First beta test snapshot.
-|BETA2 builds begin |13 February 2026 |- |Second beta test snapshot.
+|BETA2 builds begin |13 February 2026 |13 February 2026 |Second beta test snapshot.
 |BETA3 builds begin |20 February 2026 |- |Third beta test snapshot.
 |RC1 builds begin |27 February 2026 |- |First release candidate.
 |RELEASE builds begin |6 March 2026 |- |{localRel}-RELEASE builds begin.
