--- a/website/content/en/commercial/_index.adoc
+++ b/website/content/en/commercial/_index.adoc
@@ -13,7 +13,10 @@ You can see the link:consult[alphabetical] list, or, if you prefer, view it by l
 * link:hardware[Hardware Vendors] Need specialized tools, looking to buy a new desktop, or to fill a cage with rack mount servers that come with FreeBSD pre-installed?
 These companies may have what you need!
 * link:isp[Internet Service Providers] If you need webspace on a FreeBSD-based system or want your company connected to the internet, these companies may offer what you need!
+////
+// <https://github.com/freebsd/freebsd-doc/pull/604> removes the only miscellaneous vendor.
 * link:misc[Miscellaneous Vendors] Books and accessories you just cannot live without!
+////
 * link:software_bycat[Software Vendors] Vendors From audio players, network drivers, to commercial databases, FreeBSD has a wide variety of industrial strength software available.
 You can see the link:software[alphabetical] list, or, if you prefer, view it by link:software_bycat[categories].
 
