Fix include directive formatting in jail.conf example
The jail.conf example in section 17.3.4 contained a malformed
.include directive. As written, it caused the jail service to fail
with an "unexpected EOF" error when starting a jail.

This change corrects the formatting of the include directive so that
administrators can safely use /etc/jail.conf.d/*.conf for modular
jail configuration without encountering syntax errors.

--- a/documentation/content/en/books/handbook/jails/_index.adoc
+++ b/documentation/content/en/books/handbook/jails/_index.adoc
@@ -291,7 +291,7 @@ The files in [.filename]#/etc/jail.conf.d/# must have `.conf` as their extension
 
 [.programlisting]
 ....
-.include "/etc/jail.conf.d/*.conf";
+include "/etc/jail.conf.d/*.conf";
 ....
 
 A typical jail entry would look like this:
